# rhwp-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Cargo.toml  KNOWN_ISSUES.md  README.md  README_EN.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: docs-lint.py  regen-spec-trace.py  update-last-updated.py
.claude/skills/new-spec/: SKILL.md
.claude/skills/new-spec/references/: adr.md  spec.md
.claude/skills/new-spec/templates/: adr.md  spec.md
.github/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-sync.yml  docs.yml  publish-schema.yml  publish.yml
benches/: bench_gil.py
docs/: CONVENTIONS.md  upstream-pins.yaml
docs/design/v0.2.0/: ir-research.md
docs/design/v0.3.0/: cli-design-research.md  cli-research.md  ir-expansion-research.md
docs/design/v0.3.1/: ir-marker-char-offset-research.md
docs/design/v0.3.2/: ir-upstream-utf16-helper-research.md
docs/design/v0.4.0/: view-renderer-research.md
docs/design/v0.5.0/: mcp-research.md
docs/design/v0.5.1/: mcp-typed-output-research.md
docs/design/v0.6.0/: png-vlm-render-research.md
docs/design/v0.7.0/: hwpx-writeback-baseline-research.md  mcp-research.md
docs/design/v0.8.0/: hwpx-writeback-expansion-research.md
docs/implementation/: spec-system-overhaul.md
docs/implementation/v0.1.0/: migration.md
docs/implementation/v0.2.0/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md
docs/implementation/v0.3.0/: aparse-cleanup.md
docs/implementation/v0.3.0/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md
docs/implementation/v0.3.1/: migration.md
docs/implementation/v0.4.0/: migration.md
docs/implementation/v0.5.0/stages/: stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md
docs/implementation/v0.5.1/: migration.md
docs/implementation/v0.6.0/: migration.md
docs/implementation/v0.7.0/: migration.md
docs/implementation/v0.8.0/: migration.md
docs/roadmap/: README.md  phase-3.md  phase-4.md
docs/roadmap/v0.1.0/: rhwp-python.md
docs/roadmap/v0.2.0/: ir.md
docs/roadmap/v0.3.0/: cli.md  ir-expansion.md
docs/roadmap/v0.3.1/: ir-marker-char-offset.md
docs/roadmap/v0.3.2/: ir-upstream-utf16-helper.md
docs/roadmap/v0.4.0/: view-renderer.md
docs/roadmap/v0.5.0/: mcp.md
docs/roadmap/v0.5.1/: mcp-typed-output.md
docs/roadmap/v0.6.0/: png-vlm-render.md
docs/roadmap/v0.7.0/: hwpx-writeback-baseline.md  mcp.md
docs/roadmap/v0.8.0/: hwpx-writeback-expansion.md
docs/traces/: coverage.md
docs/upstream/: README.md  issue-find-control-text-positions.md  issue-hwpx-shapecomment-drawing-shapes.md  issue-macos-png-coretext-hang.md  issue-utf16-pos-to-char-idx.md
docs/verification/v0.1.0/: spinoff-review.md
examples/: 06_mcp_server.py  07_render_png.py  README.md
python/rhwp/: __init__.py  __init__.pyi  _rhwp.pyi  document.py
python/rhwp/cli/: __init__.py  __main__.py  _state.py  app.py  chunks.py  ir.py
python/rhwp/integrations/: langchain.py  langchain.pyi
python/rhwp/ir/: __init__.pyi  _mapper.py  _plain_text.py  _raw_types.py  _view.py  nodes.py  schema.py
python/rhwp/ir/schema/: hwp_ir_v1.json
python/rhwp/mcp/: __init__.py  __main__.py  server.py  tools.py
scripts/: _doc_lint.py  generate_spec_trace.py  lint_docs.py  update_upstream_pin.py
src/: document.rs  ir.rs
tests/: test_async.py  test_cli.py  test_errors.py  test_from_bytes.py  test_hwpx_writeback.py  test_ir_caption.py  test_ir_field.py  test_ir_footnote.py  test_ir_formula.py  test_ir_furniture.py  test_ir_iter_blocks.py  test_ir_list.py  test_ir_mapper.py  test_ir_marker_char_offset.py  test_ir_picture.py  test_ir_plain_text.py  test_ir_roundtrip.py  test_ir_schema.py  test_ir_schema_export.py  test_ir_tables.py  test_ir_toc.py  test_langchain_loader.py  test_langchain_loader_ir.py  test_mcp_server.py  test_parse.py  test_pdf_rendering.py  test_render_png.py  test_smoke.py  test_svg_rendering.py  test_text_extraction.py  test_v0_3_1_marker_char_offset.py  test_view_baseline.py  test_view_html.py  test_view_markdown.py
tests/baselines/: v0_3_2_table_vpos_01_ir.json
